tests/snapshots/cli__help_agent.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
Agent knowledge that needs no harness

Usage: multiplexer-driver agent [OPTIONS] <COMMAND>

Commands:
  resume-args  Print the argv that resumes an agent conversation
  help         Print this message or the help of the given subcommand(s)

Options:
      --harness <HARNESS>
          Harness to drive. Required for workspace, pane, and raw

          Possible values:
          - tmux:  tmux
          - herdr: Herdr
          
          [env: MULTIPLEXER_DRIVER_HARNESS=]

      --session <SESSION>
          Harness server to use: a Herdr session name or a tmux -L socket name. Unset uses the ambient server
          
          [env: MULTIPLEXER_DRIVER_SESSION=]

      --pretty
          Indent single-object output. Lists stay JSON Lines

      --log-level <LOG_LEVEL>
          Diagnostics level on stderr: debug, info, warn, or error
          
          [env: RUST_LOG=]
          [default: warn]

  -h, --help
          Print help (see a summary with '-h')
