tests/snapshots/cli__help_pane_list.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
List every pane, shells included.

Prints JSON Lines, one PaneRecord per line.

Example: multiplexer-driver --harness tmux pane list --workspace '$0'

Usage: multiplexer-driver pane list [OPTIONS]

Options:
      --harness <HARNESS>
          Harness to drive. Required for workspace, pane, and raw

          Possible values:
          - tmux:  tmux
          - herdr: Herdr
          
          [env: MULTIPLEXER_DRIVER_HARNESS=]

      --workspace <WORKSPACE>
          Only panes in this workspace

      --session <SESSION>
          Harness server to use: a Herdr session name or a tmux -L socket name. Unset uses the ambient server
          
          [env: MULTIPLEXER_DRIVER_SESSION=]

      --pretty
          Indent single-object output. Lists stay JSON Lines

      --log-level <LOG_LEVEL>
          Diagnostics level on stderr: debug, info, warn, or error
          
          [env: RUST_LOG=]
          [default: warn]

  -h, --help
          Print help (see a summary with '-h')
