tests/snapshots/cli__help_pane_rename.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
Set a pane's label. The handle does not change.

Prints {"handle":…,"label":…}.

Example: multiplexer-driver --harness tmux pane rename %1 --label impl-2

Usage: multiplexer-driver pane rename [OPTIONS] --label <LABEL> <HANDLE>

Arguments:
  <HANDLE>
          Pane handle

Options:
      --harness <HARNESS>
          Harness to drive. Required for workspace, pane, and raw

          Possible values:
          - tmux:  tmux
          - herdr: Herdr
          
          [env: MULTIPLEXER_DRIVER_HARNESS=]

      --label <LABEL>
          New label

      --session <SESSION>
          Harness server to use: a Herdr session name or a tmux -L socket name. Unset uses the ambient server
          
          [env: MULTIPLEXER_DRIVER_SESSION=]

      --pretty
          Indent single-object output. Lists stay JSON Lines

      --log-level <LOG_LEVEL>
          Diagnostics level on stderr: debug, info, warn, or error
          
          [env: RUST_LOG=]
          [default: warn]

  -h, --help
          Print help (see a summary with '-h')
