tests/snapshots/cli__help_pane_spawn.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
Open a new tab running a command.

Prints {"handle":…,"started":true}. If the pane was created but the command did not start, prints started:false and exits 6.

Example: multiplexer-driver --harness tmux pane spawn --name impl-1 --workspace '$0' -- bash -c 'make test'

Usage: multiplexer-driver pane spawn [OPTIONS] --name <NAME> [-- <COMMAND>...]

Arguments:
  [COMMAND]...
          Command and arguments, after `--`

Options:
      --harness <HARNESS>
          Harness to drive. Required for workspace, pane, and raw

          Possible values:
          - tmux:  tmux
          - herdr: Herdr
          
          [env: MULTIPLEXER_DRIVER_HARNESS=]

      --name <NAME>
          Label for the new tab and pane

      --session <SESSION>
          Harness server to use: a Herdr session name or a tmux -L socket name. Unset uses the ambient server
          
          [env: MULTIPLEXER_DRIVER_SESSION=]

      --workspace <WORKSPACE>
          Workspace to open the tab in; defaults to the caller's own

      --cwd <CWD>
          Working directory; defaults to the current directory

      --pretty
          Indent single-object output. Lists stay JSON Lines

      --log-level <LOG_LEVEL>
          Diagnostics level on stderr: debug, info, warn, or error
          
          [env: RUST_LOG=]
          [default: warn]

  -h, --help
          Print help (see a summary with '-h')
